[package]
name = "rmalloc"
version = "1.0.0"
authors = ["iximeow <me@iximeow.net>"]
license = "0BSD"
edition = "2018"
description = "randomized malloc"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
"libc" = "0.2.77"
"nix" = "0.18.0"
"mersenne_twister" = "1.1.1"
"rand" = "0.4.2"
