[package]
name = "rmalloc"
version = "1.0.1"
authors = ["iximeow <me@iximeow.net>"]
license = "0BSD"
edition = "2018"
description = "randomized malloc"
readme = "README.md"

[lib]
crate-type = ["cdylib"]

[dependencies]
"libc" = "0.2.77"
"nix" = "0.18.0"
"mersenne_twister" = "1.1.1"
"rand" = "0.4.2"
"cfg-if" = "0.1"
"yaxpeax-x86" = { version = "0.1.3", default-features = false, features = []}
"yaxpeax-arch" = { version = "0.0.4", default-features = false, features = []}
num-traits = "*"
